<resources>
    <string name="app_name">403 Fitness</string>
    <string name="create_account_string">
        <u>Don\'t have an account. Create one</u>
    </string>
    <string name="dialog_action_ok">OK</string>
    <string name="browse_people">Browse People</string>
    <string name="my_friends">My Friends</string>
    <string name="chat_and_messages">Chat and Messages</string>
    <string name="track_workout">Track Workout</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="groups">Groups</string>
    <string name="step_counter">Step Counter</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="bug">Bug Reporting</string>
    <string name="terms"><![CDATA[Terms & Conditions]]></string>
    <string name="description">Description</string>
    <string name="my_workout">My Workout</string>
    <string name="title">Title</string>
    <string name="select_appropriate_details">Select appropriate details</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="by_clicking_signup_you_are_agree_to_terms_and_conditions">By clicking signup, you
        are agree to terms and conditions.
    </string>
    <string name="sign_up">Sign up</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="city">City</string>
    <string name="female">Female</string>
    <string name="male">Male</string>

    <string-array name="area_focus">
        <item>Area of Focus</item>
        <item>Upper Body</item>
        <item>Lower Body</item>
        <item>Arms</item>
        <item>Back</item>
        <item>Legs</item>
        <item>All</item>
        <item>Unknown</item>
    </string-array>
    <string-array name="workout_type">
        <item>Body Type</item>
        <item>ECTOMORPH</item>
        <item>MESOMORPH</item>
        <item>ENDOMORPH</item>
        <item>Unknown</item>

    </string-array>
    <string-array name="workout_style">
        <item>Work Out Style</item>
        <item>Endurance</item>
        <item>Strength</item>
        <item>Balance</item>
        <item>Flexibility</item>
        <item>ALL Above</item>
        <item>Unknown</item>

    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
